--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiso-re-user-backend",
+  "name": "Cyberflow Assignment",
   "version": "1.0.0",
   "description": "User Backend Tiso",
   "main": "index.js",
